Add Dockerfile, GH-Actions, KubernetesProvider, Kubernetes Manifests and remove RocketChatProvider
